Dev-3_0
	* removed re-implentation of do(). Cleaning up 
	  prepare()/bind()/execute() allowed me to dispense with it so, 
	  do() is() now the default DBI do(). woo_hoo()!
	* Named place holder support added.
	 TODO: (it is broken for server-side prepare *** FIX *** )
	* ***NOTE*** calling execute without binding all placeholders is now
	  an error. Before this version, unbound placeholders would silently
	  be converted to NULLs in violation of the DBI sepc. This may cause
	  some applions to thow errors if they had been relying on this
	  behaviour
	* Read my.conf file by default even when neither 
	  msql_read_default_group nor mysq_read_default_file are specified. 
	  If mysql_read default_group is not specified, the group "dbd_mysql" 
	  will be read.
	* Makefile.PL now generates version numbers based on release tag,
	  so there is no way for an non-tagged release to make it into the wild.
	* Applied Patch from Patick Galbraith wich adds support of serer-side 
	  prepared staements and cleans up a few warnings.
	  [Patrick Galbraith <patg@mysql.com>]

2003-10-26  Rudy Lippan  <rlippan@remotelinux.com> (2.9003)
	* Applied patch from Aaron and Chuck that added basic testing of the 
	  table_info/column_info functions [Aaron Ross <aross@plusthree.com>]
	* Applied patch removing Jochen Wiedmann's contanct information and 
	  also removing the restriction on CD ROM distribution. 
	  [Jochen Wiedmen <joe@ispsoft.de>]
	* The check for the innodb table type was broken so the transaction
	  tests were skipped even though the database supported transactions.
	* :sql_types were not being inported in column info, so SQL_VARCAR was
	  thowing an error. Also, the :sql_types were not being pulled into 
	  DBD::mysq::db package
	* Patch for  dbdadmin.t so that it respects username and password
	  [Alexey Stroganov <ranger@mysql.com>]
	* Fix for memory leak in bind_param() introduced in 2.9002
	  (2.9002 changed bind_param so that changing the value of a scalar