@@ -1,4 +1,5 @@
 Dev-3_0
+	* $sth->{ParamValues} now implemented per DBI spec
 	* removed re-implentation of do(). Cleaning up 
 	  prepare()/bind()/execute() allowed me to dispense with it so, 
 	  do() is() now the default DBI do(). woo_hoo()!
